[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autogen-plasmate"
version = "0.1.0"
description = "Plasmate web browsing tool for AutoGen agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Plasmate Labs" }]
keywords = ["autogen", "plasmate", "web", "browsing", "ai", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "autogen-agentchat>=0.4.0",
    "plasmate>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/plasmate-labs/autogen-plasmate"
Documentation = "https://plasmate.dev"
Repository = "https://github.com/plasmate-labs/autogen-plasmate"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
